--- a/telas/style.css
+++ b/telas/style.css
@@ -1,11 +1,22 @@
 @charset "UTF-8";
 
-@media screen and (min-width:768px) and (max-width:992px) {
-    body {
-        background-image: linear-gradient(to top, #193ABF );
+@media screen and (min-width:768px) {
+    span#menu {
+        display: none;
+    }
 
+    menu{
+        display: block;
+    }
+
+    menu > ul > li {
+        display: inline-block;
     }
 }
+
+    main { 
+        width: 768px;
+    }
 
 @media screen and (min-width:992px){
     
