--- a/estilo/style.css
+++ b/estilo/style.css
@@ -55,7 +55,7 @@ h2 {
 }
 
 section {
-    padding-top: 1vh;
+    padding-top: 0,5vh;
     line-height: 2em;
     font-size: 3vw;
 }
@@ -69,9 +69,9 @@ section.deuses {
 }
 
 section.deuses {
-    width: 100%;
-    display: inline-block;
-    padding: 120px;
+    width: 58%;
+    display: block;
+    padding: 100px;
     background-color: rgba(0, 0, 0, 0.404);
     text-shadow: 1px 1px 0px black;
 }
@@ -86,3 +86,4 @@ img.imgs {
     margin: 10px;
     box-shadow: 3px 3px 3px black;
 }
+
